# oink

./: CMakeLists.txt  README.md  cmake_configure32.bat  cmake_configure32_vs2013.bat  cmake_configure32_vs2017.bat  cmake_configure64_vs2013.bat  cmake_configure64_vs2017.bat
base/: BasicOperations.cpp  BasicOperations.hpp  BasicTypes.hpp  CMakeLists.txt  ChessConstants.cpp  ChessConstants.hpp  Display.cpp  Display.hpp  Move.cpp  Move.hpp  MoveGenerator.cpp  MoveGenerator.hpp  Position.cpp  Position.hpp
base/tests/: BasicOperationsTests.cpp  CMakeLists.txt  MoveGeneratorTests.cpp  PositionTests.cpp
cmake/: AddGTestTest.cmake
display/: CMakeLists.txt  ConsoleDisplay.cpp  ConsoleDisplay.hpp  PgnWriter.cpp  PgnWriter.hpp
display/console/: CMakeLists.txt  ConsoleDisplay.cpp  ConsoleDisplay.hpp
engine/: BasicOperations.cpp  BasicOperations.hpp  BasicTypes.hpp  CMakeLists.txt  ChessConstants.cpp  ChessConstants.hpp  Display.cpp  Display.hpp  Evaluator.cpp  Evaluator.hpp  Move.hpp  MoveGenerator.cpp  MoveGenerator.hpp  Perft.cpp  Perft.hpp  Position.cpp  Position.hpp  Search.cpp  Search.hpp
engine/magic_gen/: CMakeLists.txt  MagicGen.cpp
engine/test_harness/: CMakeLists.txt  OinkTestHarness.cpp
engine/tests/: BasicOperationsTests.cpp  CMakeLists.txt  MoveGeneratorTests.cpp  PerftBasedTests.cpp  PositionTests.cpp  SearchTests.cpp  marcel_6838.epd
fen_parser/: CMakeLists.txt  FenParser.cpp  FenParser.hpp
fen_parser/tests/: CMakeLists.txt  FenParserTests.cpp
magic_gen/: CMakeLists.txt  MagicGen.cpp
test_harness/: CMakeLists.txt  OinkTestHarness.cpp  OinkTestHarness.hpp  Perft.cpp  Perft.hpp
winboard_driver/: CMakeLists.txt  OinkWinboardDriver.cpp
